[gd_scene load_steps=29 format=2]

[ext_resource path="res://CA/Capt_Awesome.tscn" type="PackedScene" id=1]
[ext_resource path="res://City/Trash_Can.tscn" type="PackedScene" id=2]
[ext_resource path="res://City/Pavement.png" type="Texture" id=3]
[ext_resource path="res://City/Red_Building.png" type="Texture" id=4]
[ext_resource path="res://City/Road.png" type="Texture" id=5]
[ext_resource path="res://City/Drain.png" type="Texture" id=6]
[ext_resource path="res://City/Puddle.tscn" type="PackedScene" id=7]
[ext_resource path="res://City/Garbage_Bag.tscn" type="PackedScene" id=8]
[ext_resource path="res://City/Steel_Door.png" type="Texture" id=9]
[ext_resource path="res://City/Street_Lamp.tscn" type="PackedScene" id=10]
[ext_resource path="res://Enemies/Robber.tscn" type="PackedScene" id=11]
[ext_resource path="res://UI/Health_bar.tscn" type="PackedScene" id=12]
[ext_resource path="res://Level_1.gd" type="Script" id=13]
[ext_resource path="res://Dialogue/Dialog.tscn" type="PackedScene" id=14]
[ext_resource path="res://Enemies/Robber_spawner.tscn" type="PackedScene" id=15]
[ext_resource path="res://PressStart2P-Regular.ttf" type="DynamicFontData" id=16]

[sub_resource type="TileSet" id=1]
0/name = "Pavement.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 96, 96 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=11]
0/name = "Red_Building.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 96, 95 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 16 )

[node name="World" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 13 )

[node name="Road" type="Sprite" parent="."]
position = Vector2( 160, 120 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, -19.8456, 338.617, 195.145 )

[node name="Pavement" type="TileMap" parent="."]
position = Vector2( -8, 48 )
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -2, 0, 0, -1, 0, 1, -65536, 0, 1, -65535, 0, 1, -65534, 0, 1, -65533, 0, 1, -65532, 0, 1, -65531, 0, 1, -65530, 0, 1, -65529, 0, 1, -65528, 0, 1, -65527, 0, 1, -65526, 0, 1, -65525, 0, 2, 65534, 0, 65536, 65535, 0, 65537, 0, 0, 65537, 1, 0, 65537, 2, 0, 65537, 3, 0, 65537, 4, 0, 65537, 5, 0, 65537, 6, 0, 65537, 7, 0, 65537, 8, 0, 65537, 9, 0, 65537, 10, 0, 65537, 11, 0, 65538, 131070, 0, 131072, 131071, 0, 131073, 65536, 0, 131073, 65537, 0, 131073, 65538, 0, 131073, 65539, 0, 131073, 65540, 0, 131073, 65541, 0, 131073, 65542, 0, 131073, 65543, 0, 131073, 65544, 0, 131073, 65545, 0, 131073, 65546, 0, 131073, 65547, 0, 131074 )

[node name="Building" type="TileMap" parent="."]
position = Vector2( -16, 32 )
tile_set = SubResource( 11 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -131073, 0, 0, -196608, 0, 1, -196607, 0, 1, -196606, 0, 1, -196605, 0, 1, -196604, 0, 1, -196603, 0, 1, -196602, 0, 1, -196601, 0, 1, -196600, 0, 1, -196599, 0, 1, -196598, 0, 2, -65537, 0, 65536, -131072, 0, 65537, -131071, 0, 65537, -131070, 0, 65537, -131069, 0, 65537, -131068, 0, 65537, -131067, 0, 65537, -131066, 0, 65537, -131065, 0, 65537, -131064, 0, 65537, -131063, 0, 65537, -131062, 0, 65538, -1, 0, 65536, -65536, 0, 65537, -65535, 0, 65537, -65534, 0, 65537, -65533, 0, 65537, -65532, 0, 65537, -65531, 0, 65537, -65530, 0, 65537, -65529, 0, 65537, -65528, 0, 65537, -65527, 0, 65537, -65526, 0, 65538, 65535, 0, 131072, 0, 0, 131073, 1, 0, 131073, 2, 0, 131073, 3, 0, 131073, 4, 0, 131073, 5, 0, 131073, 6, 0, 131073, 7, 0, 131073, 8, 0, 131073, 9, 0, 131073, 10, 0, 131074 )

[node name="Steel_Door" type="Sprite" parent="."]
position = Vector2( 152, 40 )
scale = Vector2( 5, 3 )
texture = ExtResource( 9 )

[node name="Drain" type="Sprite" parent="."]
position = Vector2( 200, 104 )
texture = ExtResource( 6 )

[node name="Puddle" parent="." instance=ExtResource( 7 )]
position = Vector2( 240, 152 )

[node name="YSort" type="YSort" parent="."]
position = Vector2( 0, 16 )

[node name="Street_Lamp" parent="YSort" instance=ExtResource( 10 )]
position = Vector2( 304, 80 )
scale = Vector2( 5, 3 )

[node name="Trash_Can" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 38.2353, 48.0941 )

[node name="Trash_Can3" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 232, 48 )

[node name="Trash_Can2" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 58.437, 47.9664 )

[node name="Garbage_Bag" parent="YSort" instance=ExtResource( 8 )]
position = Vector2( 24, 48 )

[node name="Garbage_Bag3" parent="YSort" instance=ExtResource( 8 )]
position = Vector2( 48, 56 )

[node name="Garbage_Bag2" parent="YSort" instance=ExtResource( 8 )]
position = Vector2( 248, 48 )

[node name="Robber" parent="YSort" instance=ExtResource( 11 )]
position = Vector2( 89, 120 )
health = 99

[node name="Capt_Awesome" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 340.288, 123.173 )
health = 99

[node name="Robber_spawner" parent="YSort" instance=ExtResource( 15 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Health_Bar" parent="CanvasLayer" instance=ExtResource( 12 )]

[node name="Dialog" parent="CanvasLayer" instance=ExtResource( 14 )]

[node name="Event_Timer" type="Timer" parent="."]

[node name="Blackout" type="Panel" parent="."]
visible = false
margin_right = 320.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Blackout"]
margin_left = 25.0
margin_top = 85.0
margin_right = 297.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "The Awesome Squad"
align = 1
uppercase = true
[connection signal="enemy_dead" from="YSort/Robber" to="." method="_on_Robber_enemy_dead"]
[connection signal="CA_dead" from="YSort/Capt_Awesome" to="." method="_on_Capt_Awesome_CA_dead"]
[connection signal="dialog_finished" from="CanvasLayer/Dialog" to="." method="_on_Dialog_dialog_finished"]
[connection signal="timeout" from="Event_Timer" to="." method="_on_Event_Timer_timeout"]

[editable path="CanvasLayer/Dialog"]
